feat: planka connection and models

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,13 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# Planka Database Connection
+PLANKA_DB_HOST=127.0.0.1
+PLANKA_DB_PORT=5432
+PLANKA_DB_DATABASE=planka
+PLANKA_DB_USERNAME=planka
+PLANKA_DB_PASSWORD=
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
