feat: planka url generator service

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# Planka Configuration
+PLANKA_URL=http://localhost:1337
+
 # Planka Database Connection
 PLANKA_DB_HOST=127.0.0.1
 PLANKA_DB_PORT=5432
