--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "spatie/laravel-ray": "^1.40"
     },
     "autoload": {
         "psr-4": {
